--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   <body>
     <h1>FML</h1>
     <h2>fml</h2>
+    <audio controls>
+  <source src="rip.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
   </body>
 </html>
