--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aplayer/1.10.1/APlayer.min.css" />
     <meta charset="utf-8">
     <title>fml</title>
   </head>
@@ -11,5 +12,6 @@
   <source src="rip.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/aplayer/1.10.1/APlayer.min.js"></script>
   </body>
 </html>
